--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,8 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-   /* border: 0.2rem solid green !important; */
+  /*  border: 0.2rem solid green !important; */
 }
+
+a{
+    text-decoration: none;
+}
+
 
 html{
     font-size: 62.5%;
@@ -11,10 +16,21 @@ html{
 }
 
 :root{
-    --background-color: #ffebcd;
+    --background-color: #ffffff;
     --font-color: #1a1a1a;
     --white: #f1f1f1;
     --hover-background-color: #f5f5f5;
+
+    --hema--rood: #e81111;
+
+    --hema--pink: #e30564;
+    --hema--lightgreen: #50b848;
+    --hema--green: #008a0a;
+    --hema--purple: #9c1aff;
+    --hema--indigo: #00838c;
+    --hema--blue: #30b2c7;
+    --hema--yellow: #f8c011;
+
 }
 
 body{
@@ -22,7 +38,6 @@ body{
     color: var(--font-color);
     font-family: "Oxygen", sans-serif;
     min-height: 100vh;
-    width: 100vw;
     font-size: 2rem;
     font-weight: 400;
 }
@@ -31,7 +46,8 @@ body{
 /* Header */
 nav{
     height: auto;
-    background-color: white;
+    background-color: var(--background-color);
+    margin-bottom: 2rem;
 }
 /* ~Header~ */
 
@@ -43,7 +59,7 @@ nav{
 
 .topmenu__wrapper{
     box-shadow: 0 0 0.2rem rgba(0,0,0,0.4);
-    background-color: white;    
+    background-color: var(--background-color);    
     padding: 0.5rem 0;
     position: relative;
     justify-content: center;
@@ -52,7 +68,7 @@ nav{
 
 .topmenu{
     width: 64rem;
-    background: white;
+    background: var(--background-color);
     gap: 3rem;
     list-style: none;
     flex-wrap: wrap; 
@@ -121,14 +137,19 @@ nav{
     align-items: center;
 }
 
+.nav__wrapper{
+    display: block;
+    height: 6rem;
+}
+
 .logo__wrapper{
     justify-content: center;
 }
 
 .mainmenu__wrapper{
     max-width: 128rem;
-    background-color: white;
-    padding: 0.5rem 0;
+    background-color: var(--background-color);
+    padding: 1.5rem 0;
     gap: 1rem;
     margin: 0 auto;
     flex-wrap: wrap;
@@ -150,7 +171,7 @@ nav{
     display: flex;
     height: 100%;
     width: 100%;
-    padding: 0.5rem 1.5rem;           
+    padding: 0.5rem 1rem; 
     gap: 0.5rem;
     border-radius: 0.6rem;
     justify-content: center;
@@ -169,8 +190,8 @@ nav{
 
 .logo__link{    
     display: flex;
-    height: 5rem;
-    width: 5rem;
+    height: 6rem;
+    width: 6rem;
     justify-content: center;
     align-items: center;
 }
@@ -189,11 +210,21 @@ nav{
     font-weight: 700;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: 4rem;
+}
+
+.navigation__item{
+    height: 100%;
+    width: 100%;
 }
 
 
 .navigation__link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
     text-decoration: none;
     color: #666666;
 }
@@ -204,7 +235,7 @@ nav{
 
 .active{
     color: cornflowerblue;
-    border-bottom: 0.5rem solid cornflowerblue;
+    border-bottom: 0.3rem solid cornflowerblue;
 }
 
 .search__wrapper{   
@@ -238,29 +269,322 @@ nav{
 
 /* ~Menu~ */
 
+/*  Main  */
+  
 main{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    max-width: 128rem;
+    margin: 0 auto;
+    position: relative;
+    margin-bottom: 4rem;
 }
 
 .main__heroimg--wrapper{
-    display: flex;
     width: 80%;
     height: 100%;
     object-fit: contain;
-    justify-content: center;
-    align-items: center;
+
 }
 
 .hero__img{
     height: 100%;
-    width: 70%;
+    width: 100%;
+    border-radius: 1rem;
 
 }
 
+.hero__sectionwrapper{
+    position: absolute;
+    width: 35%;
+    height: 60%;
+    padding: 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-self: center;
+    color: var(--background-color);
+    padding: 4rem;
+    background-color: var(--hema--rood);
+    right:0 ;
+    border-radius: 1rem;
+}
+
+
+.hero__section--titel{
+    height: 12rem;    
+    font-size: 250%;
+    font-weight: 700;
+    display: block;
+
+}
+
+.hero__section--parag{
+    height: 20%;
+    font-size: 80%;
+}
+
+.hero__section--btnwrapper{
+    height: 6rem;
+    display: flex;
+    align-items: end;
+}
+
+.hero__sectionbtn--link{
+    height: 6rem;
+    width: 100%;
+    border: 0.3rem solid var(--background-color);
+    border-radius: 1rem;
+    text-decoration: none;
+    background: none;
+    color: var(--background-color);
+    font-weight: 700;
+    font-size: 1.6rem;
+    display: flex;  
+    justify-content: center;
+    align-items: center;
+    transition: 0.4s all;
+}
+
+.hero__sectionbtn--link:hover{
+    background: var(--background-color);
+    color: var(--font-color);
+}
+
+
+
+/*Offers section*/
+
+
+.offers__sectionwrapper{
+    max-width: 128rem;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    flex-wrap: wrap;
+    gap: 3rem 1rem;
+}
+
+
+.offers__wrapper{
+    width: 41rem;
+    height: 70rem;
+    display: flex;
+    flex-direction: column;
+    border-radius: 1rem;
+    
+}
+
+.offers--titel{
+    width: 100%;
+    color: var(--font-color);
+    font-weight: 700;
+    font-size: 150%;    
+
+}
+
+
+
+.offers__figurewrapper{
+    width: 100%;
+    height: 60%;
+
+}
+
+.offers__figurewrapper img{
+    border-radius: 1rem 1rem 0 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.offers__action--wrapper{
+    height: 40%;
+    padding: 2.5rem;
+    color: var(--background-color);
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    position: relative;
+}
+
+.offers__wrapper:nth-of-type(1){
+    background-color: var(--hema--purple);
+}
+
+.offers__wrapper:nth-of-type(2){
+    background-color: var(--hema--pink);
+}
+
+.offers__wrapper:nth-of-type(3){
+    background-color: var(--hema--blue);
+}
+
+.offers__section--parag{
+    font-size: 70%;
+}
+
+
+.offers__sectionbtn--link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: var(--background-color);
+    height: 6rem;
+    width: 6rem;
+    border: 0.3rem solid var(--background-color);
+    border-radius: 50%;
+    font-size: 100%;
+    position: absolute;
+    bottom: 2.5rem;
+    transition: 0.4s all;
+}
+
+.offers__sectionbtn--link:hover{
+    background: var(--background-color);
+    color: var(--font-color);
+}
+
+
+
+
+/* Footer */
 footer{
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+
+/* Category Main*/
+.category--main
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:10rem;   
+}
+
+/* Product Styling*/
+
+.productpage--main{
+    gap: 5rem;
+}
+
+.product__wrapper{
+    width: 30rem;
+    height: 50rem;
+    display: flex;
+    flex-direction: column;
+    border-radius: 0.5rem;
+    box-shadow: 0 0 0.2rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.product__figurewrapper{
+    width: 100%;
+    height: 60%;
+}
+
+.product__figurewrapper img{
+    border-radius: 1rem 1rem 0 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.product__action--wrapper{
+    height: 40%;
+    padding: 2.5rem;
+    color: var(--background-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1.5rem;
+    position: relative;
+}
+
+.product__bottom--wrapper{
+    display: flex;
+    flex-direction: row;
+
+}
+
+.product__section--prijs{
+    color: var(--font-color);
+}
+
+.product__section--parag{
+    color: var(--font-color);
+    font-size: 70%;
+}
+
+.product__sectionbtn--link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: var(--font-color);
+    height: 5rem;
+    width: 5rem;
+
+    border-radius: 50%;
+    font-size: 100%;
+    position: absolute;
+    bottom: 2.5rem;
+    right: 2.5rem;
+    transition: 0.4s all;
+    background-color: var(--hema--yellow);
+ }   
+
+
+
+@media screen and (max-width: 82rem){
+
+
+    .topmenu__wrapper{
+        display: none;
+    }
+
+    .menubtn__wrapper{
+        padding-right: 0;
+    }
+
+    .mainmenu__wrapper {
+    box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.4);
+    }
+
+    .navigation{
+        gap: 2rem;
+    }
+    .search__wrapper{
+        display: none;
+    }
+
+    .hero__sectionwrapper{
+        height: 80%;
+    }
+
+    .offers__wrapper{
+        width: 60rem;
+    }
+}
+
+
+@media screen and (max-width: 76rem){
+
+    .hero__sectionwrapper{
+        height: 100%;
+        border-radius: 0 1rem 1rem 0;
+    }
+    .offers__sectionwrapper{
+        justify-content: center;
+    }
+
+    .offers__wrapper{
+        width: 80rem;
+    }
+}
+/*schrijf me een advertentie in een webshop voor een categorie nieuwe schoenen*/
