--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -281,7 +281,7 @@ main{
 }
 
 .main__heroimg--wrapper{
-    width: 80%;
+    width: 82.5%;
     object-fit: contain;
 }
 
@@ -349,6 +349,50 @@ main{
     color: var(--font-color);
 }
 
+/* Offers headersection */
+
+.offersheader__sectionwrapper{
+    max-width: 128rem;
+    height: auto;
+    display: flex;
+    justify-content: flex-start;
+    margin: 0 auto;
+    flex-wrap: wrap;
+    gap: 3rem 1rem;
+}
+
+.offersheader__wrapper{
+    height: 60rem;
+    display: flex;
+    flex-grow: 1;
+    flex-shrink: 1;
+    border-radius: 1rem;
+}
+
+.offersheader__action--wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+}
+
+.offersheader__figurewrapper{
+    width: 50%;
+    height: 100%;
+}
+
+.offersheader__figurewrapper img{
+    border-radius: 1rem 1rem 0 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+
+
+
+
 
 
 /*Offers section*/
@@ -358,7 +402,7 @@ main{
     max-width: 128rem;
     height: auto;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     margin: 0 auto;
     flex-wrap: wrap;
     gap: 3rem 1rem;
@@ -366,7 +410,7 @@ main{
 
 
 .offers__wrapper{
-    max-width: 40rem;
+    max-width: 42rem;
     height: 70rem;
     display: flex;
     flex-grow: 1;
@@ -479,24 +523,39 @@ footer{
     height: 50rem;
     display: flex;
     flex-grow: 1;
-    flex-shrink: 1;
     flex-direction: column;
     border-radius: 0.5rem;
     box-shadow: 0 0 0.2rem 0 rgba(0, 0, 0, 0.2);
+    cursor: pointer;
 }
+
+.product__wrapper:hover .product__figurewrapper{
+    background-color: var(--background-color);
+}
+
+.product__wrapper:hover .product__figurewrapper img {
+    scale: 1.1;
+}
+
 
 .product__figurewrapper{
     width: 100%;
     height: 60%;
     background-color: var(--hover-background-color);
+    transition: 0.5s all;
 }
+
+
 
 .product__figurewrapper img{
     border-radius: 1rem 1rem 0 0;
     height: 100%;
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
+    transition: 0.5s all;
 }
+
+
 
 .product__action--wrapper{
     height: 40%;
@@ -533,17 +592,19 @@ footer{
     color: var(--font-color);
     height: 5rem;
     width: 5rem;
-    border-radius: 0.5rem;
+    border-radius: 0.5rem;  
     font-size: 100%;
     position: absolute;
     bottom: 1.5rem;
     right: 2.5rem;
-    transition: 0.4s all;
-    background-color: var(--hema--yellow);
+    transition: 0.3s all;
+    background-color: var(--hover-background-color);
+    box-shadow: 0 0 0.3rem 0 rgba(0, 0, 0, 0.2);
  }
 
  .product__sectionbtn--link:hover{
-    background-color: var(--hover-background-color);
+    background-color: var(--hema--yellow);
+    border-radius: 50%;
  }
 
  h1{
@@ -577,6 +638,10 @@ footer{
 
     .main__heroimg--wrapper {
         width: 100%;
+    }
+
+    .offers__sectionwrapper{
+        justify-content: space-evenly   ;
     }
 
     .productpage--main{
