--- a/css/winkelwagen.css
+++ b/css/winkelwagen.css
@@ -1,13 +1,13 @@
-/* Product Styling*/
+/* Product winkelwagen Styling*/
 
 .productpage--main{
     gap: 2.66rem;
-
+    flex-direction: column;
 }
 
 .product__wrapper{
     width: 50%;
-    height: 30rem;
+    height: 20rem;
     display: flex;
     background-color: var(--hema--purple);
     flex-direction: row;
@@ -17,7 +17,7 @@
 }
 
 .product__figurewrapper{
-    width: 100%;
+    width: 70%;
     height: 100%;
     background-color: var(--hover-background-color);
 }
