--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -557,7 +557,7 @@ main{
     color: var(--font-color);
 }
 
-
+    
 
 
 /* Footer */
@@ -565,6 +565,7 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 
@@ -591,7 +592,7 @@ footer{
     flex-grow: 1;
     flex-direction: column;
     border-radius: 0.5rem;
-    box-shadow: 0 0 0.2rem 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 0.2rem 0 var(--font-color);
     cursor: pointer;
 }
 
@@ -609,6 +610,7 @@ footer{
     height: 60%;
     background-color: var(--hover-background-color);
     transition: 0.5s all;
+    border-radius: 0.5rem;
 }
 
 
@@ -663,8 +665,8 @@ footer{
     position: absolute;
     bottom: 1.5rem;
     right: 2.5rem;
-    transition: 0.3s all;
-    background-color: var(--hover-background-color);
+    transition: 0.1s all;
+    background-color: var(--background-color);
     box-shadow: 0 0 0.3rem 0 rgba(0, 0, 0, 0.2);
  }
 
@@ -680,6 +682,52 @@ footer{
     justify-content: flex-start;
     padding: 2rem 0;  
  }
+
+
+ /* filter styling */
+ .inputs{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 4rem;
+    flex-wrap: wrap;
+    max-width: 128rem;
+    margin: 0 auto;
+    margin-bottom: 4rem;
+  }
+
+  .inputs > div{
+    display: flex;
+    align-items: center;
+    width: 40rem;
+  }
+
+  .inputs > div > label:hover, input:hover{
+    cursor: pointer;
+  }
+
+  .label{
+    font-size: 110%;
+  }
+
+  .filter{
+    width: 3rem;
+    height: 3rem;
+    margin-right: 2rem;
+    appearance: none;
+    -webkit-appearance: none;
+    background: #eee;
+    border-radius: 0.5rem;
+    box-shadow: inset 0 0 0.5rem 0 rgba(0,0,0,0.4);
+  }
+
+  .filter:checked{
+    background: pink;
+  }
+  .filter:checked ~ .label{
+    text-decoration: underline;
+  }
+
 
 
 
