--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -129,6 +129,56 @@ nav{
 
 /* MainMenu */
 
+#dialog-container{
+
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    
+}
+
+#modal_example1{
+    z-index: 10;
+    justify-content: center;
+    align-items: center;
+    justify-self: center;
+    flex-direction: column;
+    height: 20rem;
+    width: 40%;
+    gap: 2rem;
+}
+
+#dialog-btn-container{
+    display: flex;
+    flex-direction: row;
+    height: 5rem;
+    width: 100%;
+    gap: 5rem;
+    justify-content: center;
+
+
+}
+
+.dialog-btn{
+    height: 100%;
+    width: 25%;
+    outline: none;
+    appearance: none;
+    color: var(--background-color);
+    border: none;
+    border-radius: 1rem;
+}
+
+.dialog-btn:nth-of-type(1){
+    background-color: var(--hema--green);
+}
+
+.dialog-btn:nth-of-type(2){
+    background-color: var(--hema--rood);
+}
 
 .mainmenu__wrapper, .logo__wrapper, .nav__wrapper, 
 .menubtn__wrapper, .search__wrapper {
@@ -586,7 +636,7 @@ footer{
 }
 
 .product__wrapper{
-    width: 30rem;
+    max-width: 30rem;
     height: 50rem;
     display: flex;
     flex-grow: 1;
@@ -689,7 +739,7 @@ footer{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 4rem;
+    gap: 2rem;
     flex-wrap: wrap;
     max-width: 128rem;
     margin: 0 auto;
@@ -699,7 +749,7 @@ footer{
   .inputs > div{
     display: flex;
     align-items: center;
-    width: 40rem;
+    width: 15rem;
   }
 
   .inputs > div > label:hover, input:hover{
@@ -711,8 +761,8 @@ footer{
   }
 
   .filter{
-    width: 3rem;
-    height: 3rem;
+    width: 2rem;
+    height: 2rem;
     margin-right: 2rem;
     appearance: none;
     -webkit-appearance: none;
@@ -722,11 +772,47 @@ footer{
   }
 
   .filter:checked{
-    background: pink;
+    background: var(--hema--rood);
   }
   .filter:checked ~ .label{
     text-decoration: underline;
   }
+
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 2rem;
+    border: 0.1rem solid #888;
+    width: 80%;
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 2.8rem;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
 
 
 
